[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.0"
actix-web-actors = "4.0.0"
actix-cors = "0.6.4"
async-trait = "0.1.52"
uuid = { version = "0.8.2", features=["v4"] }
tokio = "1.15.0"
anyhow = "1.0.52"
serde = "1.0.133"
serde_json = "1.0.75"
dotenv = "0.15.0"
env_logger = "0.9.0"
mongodb = { version = "2.1.0", features = ["bson-chrono-0_4"] }
chrono = "0.4.19"
futures = "0.3.19"
rand = "0.8.4"
